[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "synthba"
version = "0.0.0"
authors = [ { name="Lemuel Puglisi", email="lemuelpuglisi001@gmail.com" } ]
description = "SynthBA: Reliable Brain Age Estimation Across Multiple MRI Sequences and Resolutions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]